virtual_service_2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "httpbin.example.com"
  gateways:
  - httpbin-gateway
  http:
          - name: "status"
            match:
                    - uri:
                            prefix: /status
                    - uri:
                            prefix: /delay
                    - uri:
                            prefix: /html
            route:
                    - destination:
                            port: 
                             number: 8000
                            host: httpbin
